# src/features/auth/model/index.ts
@@ -4,6 +4,7 @@ import api from "../../../api";
 
 type User = {
     id: number;
+    username: string;
     token: string;
 };
 
